Fix incident ids